Fix button visibility for introduction screens, part of JIRA 1615

--- a/software/nbia-search/src/app/introduction/introduction.component.scss
+++ b/software/nbia-search/src/app/introduction/introduction.component.scss
@@ -48,6 +48,7 @@
 }
 
 .intro-button {
+    color: #fff;
     background-color: #000;
   margin: 1px;
 }
